--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@ title: Allen Pike
 ---
 
 <div id="home">
-  <h1>Articles</h1>
+  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I craft apps, from pixels to code, at <a href='http://www.steamclock.com/'>Steamclock</a> in Vancouver. I write here and <a href='http://www.twitter.com/apike/'>on Twitter</a>.</p>
+
+  <h1>Recently</h1>
   <ul class="posts">
-    {% for post in site.posts %}
+    {% for post in site.posts limit: 10 %}
       <li><span>{{ post.date | date: "%B %Y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+
+  <p><a href='/archive/'>Archive of all posts</a>.</p>
 </div>
