--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Allen Pike
   <h1>Recently</h1>
   <ul class="posts">
     {% for post in site.posts limit: 10 %}
-      <li><span>{{ post.date | date: "%B %Y" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date: "%B %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 
