More mobile, etc.

--- a/feed/index.html
+++ b/feed/index.html
@@ -4,7 +4,7 @@ layout: nil
 <?xml version="1.0"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
  
-  <title>www.allenpike.com</title>
+  <title>Allen Pike</title>
   <link href="http://www.allenpike.com/"/>
   <link type="application/atom+xml" rel="self" href="http://www.allenpike.com/feed/"/>
   <updated>{{ site.time | date_to_xmlschema }}</updated>
@@ -13,7 +13,7 @@ layout: nil
     <name>Allen Pike</name>
   </author>
 
-  {% for post in site.posts %}
+  {% for post in site.posts limit:3 %}
   <entry>
     <id>http://www.allenpike.com{{ post.id }}</id>
     <link type="text/html" rel="alternate" href="http://www.allenpike.com{{ post.url }}"/>
