--- a/feed/index.html
+++ b/feed/index.html
@@ -23,7 +23,7 @@ layout: nil
       <name>Allen Pike</name>
       <uri>http://www.allenpike.com/</uri>
     </author>
-    <content type="html">{{ post.content | xml_escape }}</content>
+    <content type="html">{{ post.content | xml_escape | relative_urls_to_absolute }}</content>
   </entry>
   {% endfor %}
  
