--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ isHome: true
 <div id="home">
   <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I craft apps, from pixels to code, at <a href='http://www.steamclock.com/'>Steamclock</a> in Vancouver. I write here and <a href='http://www.twitter.com/apike/'>on Twitter</a>.</p>
 
-  <h1>Recently</h1>
+  <h1>Newest Articles</h1>
   <ul class="posts">
-    {% for post in site.posts limit: 10 %}
+    {% for post in site.posts limit: 15 %}
       <li><span>{{ post.date | date: "%B %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
