--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@ isHome: true
 
   <h1>Newest Articles</h1>
   <ul class="posts">
-    {% for post in site.posts limit: 15 %}
-      <li><span>{{ post.date | date: "%B %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% for post in site.posts limit: 20 %}
+      <li><span>{{ post.date | date: "%B %Y" }}</span>{% if post.featured %} <b> {% endif %}
+<a href="{{ post.url }}">{{ post.title }}</a>{% if post.featured %} </b> {% endif %}</li>
     {% endfor %}
   </ul>
 
-  <p><a href='/archive/'>Archive of all posts</a>.</p>
+  <p><a href='/archive/'>Archive of all articles</a>.</p>
 </div>
