--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@ isHome: true
 <div id="home">
   <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I craft apps, from pixels to code, at <a href='http://www.steamclock.com/'>Steamclock</a> in Vancouver. I write here and <a href='http://www.twitter.com/apike/'>on Twitter</a>.</p>
 
-  <h1>Newest Articles</h1>
-  <ul class="posts">
-    {% for post in site.posts limit: 20 %}
-      <li><span>{{ post.date | date: "%B %Y" }}</span>{% if post.featured %} <b> {% endif %}
-<a href="{{ post.url }}">{{ post.title }}</a>{% if post.featured %} </b> {% endif %}</li>
+  <p><b>Recent Articles</b></p>
+
+  <ul class="posts" id="recent">
+    {% for post in site.posts limit: 12 %}
+    <li>
+        
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        <p class="description" style="padding-bottom: 1em"><span class="date">{{ post.date | date: "%B %Y" }}</span><br>{{ post.summary }} </p>
+    </li>
     {% endfor %}
   </ul>
 
