--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ isHome: true
 ---
 
 <div id="home">
-  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I craft apps, from pixels to code, at <a href='http://www.steamclock.com/'>Steamclock</a> in Vancouver. I write here and <a href='http://www.twitter.com/apike/'>on Twitter</a>.</p>
+  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a>. We craft apps, from pixels to code, in Vancouver. I write here and <a href='http://www.twitter.com/apike/'>on Twitter</a>.</p>
 
   <p><b>Recent Articles</b></p>
 
