A nicer archive page, and summaries for recent articles.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ isHome: true
     {% endfor %}
   </ul>
 
-  <p><a href='/archive/'>Archive of all articles</a>.</p>
+  <h2><a href='/archive/'>Archive of all articles →</a></h2>
 </div>
