--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ isHome: true
 ---
 
 <div id="home">
-  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a>, where we design and develop apps. I write here and <a href="http://www.twitter.com/apike/">on Twitter</a>.</p>
+  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a>, where we design and develop polished apps in beautiful Vancouver. Once a month, I write an article and publish it here.</p>
 
-  <p><b>Recent Articles</b></p>
+  <h4>Recent Articles</h4>
 
   <ul class="posts" id="recent">
     {% for post in site.posts limit: 12 %}
