--- a/feed/index.html
+++ b/feed/index.html
@@ -14,16 +14,17 @@ layout: nil
   </author>
 
   {% for post in site.posts limit:3 %}
+  {% capture coda %}{% if post.link %}<a href="{{ post.url }}">∞</a>{% endif %}{% endcapture %}
   <entry>
     <id>http://www.allenpike.com{{ post.url }}</id>
-    <link type="text/html" rel="alternate" href="http://www.allenpike.com{{ post.url }}"/>
+    <link type="text/html" rel="alternate" href="{% if post.link %}{{ post.link }}{% else %}https://www.allenpike.com{{ post.url }}{% endif %}"/>
     <title>{{ post.title | xml_escape }}</title>
     <updated>{{ post.date | date_to_xmlschema }}</updated>
     <author>
       <name>Allen Pike</name>
       <uri>http://www.allenpike.com/</uri>
     </author>
-    <content type="html">{{ post.content | xml_escape | relative_urls_to_absolute }}</content>
+    <content type="html">{{ post.content | append: coda | xml_escape | relative_urls_to_absolute }}</content>
   </entry>
   {% endfor %}
  
