--- a/atom/index.html
+++ b/atom/index.html
@@ -5,7 +5,7 @@ layout: nil
 <feed xmlns="http://www.w3.org/2005/Atom">
  
   <title>Allen Pike</title>
-  <link href="http://www.allenpike.com/"/>
+  <link href="https://www.allenpike.com/"/>
   <link type="application/atom+xml" rel="self" href="{{ site.baseurl }}/feed/"/>
   <updated>{{ site.time | date_to_xmlschema }}</updated>
   <id>{{ site.baseurl }}/</id>
@@ -14,16 +14,17 @@ layout: nil
   </author>
 
   {% for post in site.posts limit:3 %}
+  {% capture coda %}{% if post.link %}<a href="{{ post.url }}">∞</a>{% endif %}{% endcapture %}
   <entry>
     <id>{{ site.baseurl }}{{ post.id }}</id>
-    <link type="text/html" rel="alternate" href="{{ site.baseurl }}{{ post.url }}"/>
+    <link type="text/html" rel="alternate" href="{% if post.link %}{{ post.link }}{% else %}https://www.allenpike.com{{ post.url }}{% endif %}"/>
     <title>{{ post.title | xml_escape }}</title>
     <updated>{{ post.date | date_to_xmlschema }}</updated>
     <author>
       <name>Allen Pike</name>
       <uri>{{ site.baseurl }}/</uri>
     </author>
-    <content type="html">{{ post.content | xml_escape | relative_urls_to_absolute }}</content>
+    <content type="html">{{ post.content | append: coda | xml_escape | relative_urls_to_absolute }}</content>
   </entry>
   {% endfor %}
  
