--- a/feed/index.html
+++ b/feed/index.html
@@ -22,7 +22,7 @@ layout: nil
     <updated>{{ post.date | date_to_xmlschema }}</updated>
     <author>
       <name>Allen Pike</name>
-      <uri>http://www.allenpike.com/</uri>
+      <uri>https://www.allenpike.com/</uri>
     </author>
     <content type="html">{{ post.content | append: coda | xml_escape | relative_urls_to_absolute }}</content>
   </entry>
