--- a/atom/index.html
+++ b/atom/index.html
@@ -6,9 +6,9 @@ layout: nil
  
   <title>Allen Pike</title>
   <link href="https://www.allenpike.com/"/>
-  <link type="application/atom+xml" rel="self" href="{{ site.baseurl }}/feed/"/>
+  <link type="application/atom+xml" rel="self" href="{{ site.url }}/feed/"/>
   <updated>{{ site.time | date_to_xmlschema }}</updated>
-  <id>{{ site.baseurl }}/</id>
+  <id>{{ site.url }}/</id>
   <author>
     <name>Allen Pike</name>
   </author>
@@ -16,13 +16,13 @@ layout: nil
   {% for post in site.posts limit:3 %}
   {% capture coda %}{% if post.link %}<a href="{{ post.url }}">∞</a>{% endif %}{% endcapture %}
   <entry>
-    <id>{{ site.baseurl }}{{ post.id }}</id>
+    <id>{{ site.url }}{{ post.id }}</id>
     <link type="text/html" rel="alternate" href="{% if post.link %}{{ post.link }}{% else %}https://www.allenpike.com{{ post.url }}{% endif %}"/>
     <title>{{ post.title | xml_escape }}</title>
     <updated>{{ post.date | date_to_xmlschema }}</updated>
     <author>
       <name>Allen Pike</name>
-      <uri>{{ site.baseurl }}/</uri>
+      <uri>{{ site.url }}/</uri>
     </author>
     <content type="html">{{ post.content | append: coda | xml_escape | relative_urls_to_absolute }}</content>
   </entry>
