--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ isHome: true
 ---
 
 <div id="home">
-  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a>, where we design and develop polished apps in beautiful Vancouver. At least monthly, I write an article and publish it here.</p>
+  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a>, where we design and develop nice apps in beautiful Vancouver. At least monthly, I write an article and publish it here.</p>
 
     {% for post in site.posts limit: 12 %}
 
