Refining and getting almost ready to be able to go live.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ isHome: true
 
     {% endfor %}
   </ul>
-
-  <h2><a href='/archive/'>Archive of all articles →</a></h2>
+  <hr class="subtle">
+  <h2><a href='/archive/'>Explore more articles →</a></h2>
 </div>
