--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 fulltitle: Allen Pike, pixel crafter
+title: Allen Pike, pixel crafter
 isHome: true
+summary: Allen Pike writes about making nice software, building teams, and other tricky things.
 ---
 
 <div id="home">
