Heroes post and tiny tweaks. (#91)
* Draft.
* Tweak
* Refining
* Trying marie kondo example
* Tweaks
* Fixed a typo and zoomed a little
* Tagging
* Another tag
* Front intro

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ summary: Allen Pike writes about making nice software, building teams, and other
 ---
 
 <div id="home">
-  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a>, where we design and develop nice apps in beautiful Vancouver. At least monthly, I write an article and publish it here.</p>
+  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I run <a href='http://www.steamclock.com/'>Steamclock</a> – where we design and develop nice apps in Vancouver – and host <a href='https://funfact.fm'>Fun Fact</a> and <a href='https://itshipped.fm'>It Shipped That Way</a>.</p><p>At least monthly, I write an article and publish it here.</p>
 
     {% for post in site.posts limit: 12 %}
 
