--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ summary: Allen Pike writes about making nice software, building teams, and other
 
     {% for post in site.posts limit: 12 %}
 
-      {% include page.html %}
+      {% include excerpt.html %}
 
     {% endfor %}
   </ul>
