Refined homepage intro.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ summary: Allen Pike writes about making nice software, building teams, and other
 ---
 
 <div id="home">
-  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I founded <a href='http://www.steamclock.com/'>Steamclock</a>, host <a href='https://funfact.fm'>Fun Fact</a> and <a href='https://itshipped.fm'>It Shipped That Way</a>, and am working on something new.</p><p>At least monthly, I write an article and publish it here.</p>
+  <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I’m currently building a new product startup in Vancouver, hosting <a href='https://itshipped.fm'>It Shipped That Way</a>, and writing monthly about what I‘m learning.</p>
 
     {% for post in site.posts limit: 12 %}
 
