--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ summary: Allen Pike writes about making nice software, building teams, and other
 <div id="home">
   <p>Hi, I'm <a href='/me/'>Allen Pike</a>. I’m currently building <a href="https://forestwalk.ai">Forestwalk Labs</a>, hosting <a href='https://itshipped.fm'>It Shipped That Way</a>, and writing monthly about what I’m learning.</p>
 
-    {% for post in site.posts limit: 12 %}
+  {% for post in site.posts limit: 12 %}
 
-      {% include excerpt.html %}
+  {% include excerpt.html %}
 
-    {% endfor %}
+  {% endfor %}
   </ul>
   <hr class="subtle">
-  <h2><a href='/archive/'>Explore more articles →</a></h2>
+  <h2>Browse <a href='/archive/'>all articles</a>, or <a href='/series/best/'>just the best</a>.</h2>
 </div>
